furnidashboard/static/css/project.css
.field-wrapper {
  margin-right:25px;
}
.field-wrapper.inline {
  float:left;
}
.inline {
  display:inline;
}
.clear {
  clear:both;
}
.fieldset-inline {
  display:inline;
}

div.search {
  padding-top:.3em;
  float:right;
}
div.search form {
  margin:0
}

/* ORDER FORM */
div.order-comments-wrapper {
  clear:both;
}
#id_comments , #id_delivery_person_notes{
  width:100%;
  height:100px;
}
#deliveries textarea {
  width:600px;
  height:80px;
}
.results_on_deck {
  font-size:1.25em;
}
.results_on_deck .ui-icon-trash {
  margin-right:5px;
}
input.order-item-desc {
  width:500px;
}
.order-totals-wrapper {
  font-size: 1.3em;
  font-weight: bold;
  font-family: courier new,monospace;
  margin-top:1em;
}
#balance-due {
  color: red;
  border-color: red;
}
.order-totals-wrapper > span {
  margin-right:1em;
}
.totals-amount {
  background: none repeat scroll 0 0 #000000;
  border: 3px solid #24D830;
  color: #24D830;
  margin-left: 0.3em;
  padding: 5px 10px;
}
/* /ORDER FORM */

/* ORDER LIST */
#order-list,
#order-list div.table-container, 
#order-list div.table-container > table {
  width:100%;
}
#monthly-sales-report, #totals-ytd{
  float:left;
}
#monthly-sales-report {
  padding-right:20px;
}
#totals-ytd {
  margin-top:50px;
}
#monthly-bonus-report {
  float:left;
}
#ytd-sales-report {
  clear:both;
}
#bonus_scale {
  float:right;
}

/* ORDER FILTER */
#order-filter .form-group {
    margin-right: 20px;
}
#order-filter .sr-only {
    position: initial;
    width: auto;
    height: auto;
}
#order-filter .form-control {
    display: block;
}
#order-filter .btn {
    margin-top: 18px;
}
/* \ORDER FILTER */

#totals {
  padding:2em 0;
}
#totals > div {
  float:left;
  margin-left:2em;
}
#pager {
  padding-bottom:3em;
}
#associate-order-tabs {
  margin-top:40px;
}
/* \ORDER LIST */

/* ORDER DETAIL */
table.dashed-table,  #order-items-table, #order-detail-table, #order-payments-table, #order-deliveries-table {
  border: 1px solid #D3D3D3;
}
table.dashed-table td,
table.dashed-table th,
#order-items-table td,
#order-items-table th,
#order-detail-table td, 
#order-payments-table td,
#order-deliveries-table td{
  border: 1px dashed #D3D3D3;
  padding: 0.5em 1em;
}
#order-deliveries-table th{
  padding: .7em 1em;
}
/* \ORDER DETAIL */

/* ORDER REPORTS */
#dateRangeFilter .control-group {
  display:inline-block;
  margin-left:15px;
}
.slice text {
 font-size: 16pt;
 font-family: Arial;
}   
#totals-ytd td.total {
  font-weight:bold;
  font-size: larger;
}
/* \ORDER REPORTS */

a.delete-row {
  float: right;
  position: relative;
  bottom: 2.2em;
  right: 1em;
  color: red;
  background: pink;
  border-radius: 5px;
  padding: .2em .5em;
}

.checkbox-middle {
  margin-top:30px;
}

